--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#">About us</a>
                     </li>
                     <li>
-                        <a href="../MDWowner/search.html" target="_blank">Search</a>
+                        <a href="../MDW-project-owner/search.html" target="_blank">Search</a>
                     </li>
                 </ul>
             </nav>
